# KickCAT

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  FlexibleEC1.json  LICENSE  README.md  conanfile.py  conanfile.txt  pyproject.toml  setup_build.sh  uncrustify.cfg
Lua/: CMakeLists.txt  bindings.cc  bindings.h  bus.cc  helpers.cc  helpers.h  link.cc  protocol.h  socket.cc
example/: CMakeLists.txt  easycat_example.cc  test.cc
examples/easycat/: CMakeLists.txt  easycat_example.cc  easycat_redundancy_example.cc  easycat_stupid_redundancy.cc
examples/elmoControl/: CMakeLists.txt  elmoControl.cc
examples/elmoControl/include/: CanOpenErrors.h  CanOpenStateMachine.h  ElmoProtocol.h
examples/elmoControl/src/: CanOpenStateMachine.cc
examples/elmo_control/: CMakeLists.txt  elmo_control.cc
examples/elmo_control/include/: CanOpenErrors.h  CanOpenStateMachine.h  ElmoProtocol.h
examples/ingenia_control/: CMakeLists.txt  ingenia_control.cc
examples/master/: CMakeLists.txt
examples/master/common/: CMakeLists.txt
examples/master/ds402_drive/: CMakeLists.txt  ds402_sinus.cc
examples/master/easycat/: CMakeLists.txt  easycat_example.cc
examples/master/elmo/: CMakeLists.txt  elmo_control.cc
examples/master/elmo_control/: elmo_control.cc
examples/master/eoe_loopback/: CMakeLists.txt  eoe_loopback.cc
examples/master/freedom-k64f/: CMakeLists.txt  freedom_k64f_accel_map_example.cc  freedom_k64f_example.cc  freedom_k64f_mag_map_example.cc  freedom_k64f_static_map_example.cc
examples/master/gateway/: CMakeLists.txt  emitter.cc  server.cc
examples/master/ingenia/: CMakeLists.txt  ingenia_control.cc  ingenia_info.cc
examples/master/ingenia_control/: ingenia_control.cc
examples/master/load_esi/: CMakeLists.txt  load_esi.cc
examples/master/marvin/: CMakeLists.txt  marvin.cc
examples/master/scout/: CMakeLists.txt  scout.cc  scout_info.cc
examples/master/simulated_bus/: CMakeLists.txt  simulated_bus.cc
examples/master/test/: emitter.cc
examples/master/topology/: CMakeLists.txt  topology_example.cc
examples/master/wdc_foot/: CMakeLists.txt  wdc_foot_example.cc
examples/slave/: CMakeLists.txt
examples/slave/common/: xpg_strerror_r.cc
examples/slave/nuttx_lan9252/: CMakeLists.txt  main.cc
examples/test/: CMakeLists.txt  emitter.cc  server.cc  vsock.cc
image-poc/: CMakeLists.txt  image-publisher.cc  image-subscriber.cc  protocol.h
lib/: CMakeLists.txt
lib/include/kickcat/: AbstractSocket.h  Error.h  Frame.h  KickCAT.h  LockedRing.h  LoopbackSocket.h  Mailbox.h  Ring.h  SBufQueue.h  SimulatorControl.h  SocketNull.h  SpscQueue.h  TapSocket.h  Treiber.h  Units.h  debug.h  protocol.h  string_conversion.h  types.h
lib/kickmsg/: ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
lib/kickmsg/benchmarks/: CMakeLists.txt  bench.cc  microbench.cc
lib/kickmsg/src/: Node.cc  types.cc  (+3 more)
lib/master/: CMakeLists.txt
lib/simulation/: CMakeLists.txt
lib/slave/: CMakeLists.txt  README.md
lib/src/: Frame.cc  Mailbox.cc  SIIParser.cc  TapSocket.cc  Time.cc  Treiber.cc  protocol.cc
py_bindings/: CMakeLists.txt  enable_raw_access.sh
py_bindings/examples/: easycat.py  freedom-k64f.py  read_pdo_mapping.py
py_bindings/src/: kickcat_py.cc
tests/: CMakeLists.txt  stress_test.cc  tsan.supp
tests/unit/: subscriber_test.cc  types_test.cc
tools/: CMakeLists.txt  checkNetworkStability.cc  check_network_stability.cc  debugExample.cc  debugUseCase.cc  eeprom.cc  eeprom_gui.py  ethercat_gui.py  ingenia_esi.xml  od_generator.cc  read_pdo_mapping.py  redundancy_bench.cc  run.cc  scanTopology.cc  scan_topology.cc  test_write_eeprom.cc
tools/benchmarking/: ecat_master_bench.sh  perf_comparison.py
tools/common/: CMakeLists.txt  GuiApp.cc  GuiApp.h  bundled_fonts.h
tools/diagnosticsArchi/: ElmoProtocol.h  diagnosticsAPI.h  diagnosticsBus.h  diagnosticsServer.h  formatter.h
tools/diagnosticsHelpers/: displayTopology.py  requirements.txt
tools/eeprom_editor/: App.cc  App.h  CMakeLists.txt  EditorUtils.cc  Editors.h  FMMUEditor.cc  GeneralEditor.cc  InfoEditor.cc  PDOEditor.cc  StringsEditor.cc  SyncManagerEditor.cc  main.cc
tools/errorsTestbench/: CANOpenStateMachine.h  ElmoProtocol.h  Error.h  errorsTestbench.cc  testsLinkDetection.cc
tools/ethercat_gui/: backend.py  main.py  mainwindow.py  widgets.py
tools/kickui/: BusProtocol.h  BusSession.cc  BusSession.h  CMakeLists.txt  EtherCATPanel.cc  EtherCATPanel.h  EventLog.cc  EventLog.h  MotorPanel.cc  MotorPanel.h  Panel.h  PdoValuesPanel.cc  PdoValuesPanel.h  PrivilegeHelper.cc  PrivilegeHelper.h  Profile.cc  Profile.h  SdoPanel.cc  SdoPanel.h  Simulator.cc  Simulator.h  Theme.cc  Theme.h  TopologyView.cc  TopologyView.h  main.cc
tools/setup/: detect_compiler.sh  detect_gcc.sh  version.sh
unit/: AbstractESC-t.cc  AbstractESC2-t.cc  CMakeLists.txt  ESM-t.cc  ESMStateInit-t.cc  ESMStateOP-t.cc  ESMStatePreOP-t.cc  ESMStateSafeOP-t.cc  ESMStateTest.h  FSM-t.cc  Mocks.h  Ring-t.cc  Time.cc  bus-t.cc  debug-t.cc  debughelpers-t.cc  diagnostics-t.cc  frame-t.cc  gateway-t.cc  kickcat-t.cc  kickcat_esi_test_basic.xml  kickcat_esi_test_complex.xml  kickcat_esi_test_multi_device.xml  kickcat_esi_test_sm_fmmu.xml  link-t.cc  linkRedundancy-t.cc  linkSingle-t.cc  mailbox-t.cc  prints-t.cc  protocol-t.cc  slave-t.cc  socket-t.cc
unit/mailbox/: response-t.cc
unit/mocks/: ESC.h  ESMStateTest.h  EmulatedNetworkHelpers.h  Link.h  SPI.h  Sockets.h  Time.h
unit/src/: AbstractSPI-t.cc  EEPROM_factory-t.cc  ESM-t.cc  ESMStateInit-t.cc  ESMStateOP-t.cc  ESMStatePreOP-t.cc  ESMStateSafeOP-t.cc  EmulatedESC-t.cc  EmulatedNetwork-t.cc  Mutex-t.cc  Ring-t.cc  SBufQueue-t.cc  SIIParser-t.cc  SimulatorControl-t.cc  SoftPll-t.cc  SpscQueue-stress-t.cc  SpscQueue-t.cc  Time.cc  Timer-t.cc  Treiber-t.cc  Units-t.cc  adler32_sum-t.cc  bus-t.cc  dc-t.cc  debughelpers-t.cc  diagnostics-t.cc  error-t.cc  frame-t.cc  gateway-t.cc  kickcat-t.cc  link-t.cc  masterOD-gateway-t.cc  masterOD-t.cc  prints-t.cc  protocol-t.cc  redundancy-t.cc  simulation-t.cc  slave-t.cc  socket-t.cc  time-t.cc
(+513 files in other folders)
