[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.3.2", "conan"]
build-backend = "scikit_build_core.build"

[project]
name = "kickcat"
version = "0.0.0"
description = "Thin EtherCAT stack designed to be embedded in a more complex software."
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "CeCILL-C" }
maintainers = [
  {name = "Philippe Leduc", email = "philippe.leduc@mailfence.com"}
]

[tool.scikit-build]
minimum-version = "0.11"
cmake.version = ">=3.30"
ninja.make-fallback = true
wheel.cmake = true
editable.verbose = true

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_RPATH_USE_LINK_PATH = true
CMAKE_BUILD_WITH_INSTALL_RPATH = true
CMAKE_INSTALL_RPATH = '$ORIGIN'
CMAKE_INTERPROCEDURAL_OPTIMIZATION = true
CMAKE_SHARED_LINKER_FLAGS_RELEASE = "-Wl,--gc-sections -Wl,--strip-all"
ENABLE_ESI_PARSER = "OFF"
BUILD_UNIT_TESTS  = "OFF"
CODE_COVERAGE     = "OFF"
BUILD_SIMULATION  = "OFF"
BUILD_TOOLS       = "OFF"

[tool.cibuildwheel]
# https://github.com/pypa/cibuildwheel/blob/main/docs/options.md
build-verbosity = 1
manylinux-x86_64-image = "manylinux_2_28"
build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64"]

[[tool.cibuildwheel.overrides]]
# nanobind does not support Stable ABI for Python < 3.12
select = "cp3{10,11}-*"
config-settings = { "cmake.define.CMAKE_CI_BUILD" = true, "cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/kickcat_build_config", "cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/kickcat_build_config/toolchain.cmake" }
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.config-settings]
"wheel.py-api" = "cp312"
"cmake.define.CMAKE_CI_BUILD" = true
"cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/kickcat_build_config"
"cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/kickcat_build_config/toolchain.cmake"

[tool.cibuildwheel.linux]
before-all = [
  'pipx install conan',
  './setup_build.sh /tmp/kickcat_build_config',
  'source tools/setup/version.sh && sed -i "s/0\.0\.0/${VERSION}/g" pyproject.toml'
]
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]
