[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.3.2", "conan"]
build-backend = "scikit_build_core.build"

[project]
name = "kickcat"
version = "0.0.0"
description = "Thin EtherCAT stack designed to be embedded in a more complex software."
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "CeCILL-C" }
maintainers = [
  {name = "Philippe Leduc", email = "philippe.leduc@mailfence.com"}
]

[tool.scikit-build]
minimum-version = "0.11"
cmake.version = ">=3.30"
ninja.make-fallback = true
wheel.cmake = true
editable.verbose = true

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_RPATH_USE_LINK_PATH = true
CMAKE_BUILD_WITH_INSTALL_RPATH = true
CMAKE_INSTALL_RPATH = '$ORIGIN'
CMAKE_INTERPROCEDURAL_OPTIMIZATION = true
CMAKE_SHARED_LINKER_FLAGS_RELEASE = "-Wl,--gc-sections -Wl,--strip-all"
ENABLE_ESI_PARSER = "OFF"
BUILD_UNIT_TESTS  = "OFF"
ENABLE_CODE_COVERAGE = "OFF"
BUILD_SIMULATION  = "OFF"
BUILD_TOOLS       = "OFF"
BUILD_MASTER_EXAMPLES = "OFF"
BUILD_SLAVE_EXAMPLES  = "OFF"

[tool.cibuildwheel]
# https://github.com/pypa/cibuildwheel/blob/main/docs/options.md
build-verbosity = 1
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
build = ["cp310-manylinux_*", "cp311-manylinux_*", "cp312-manylinux_*"]

[[tool.cibuildwheel.overrides]]
# nanobind does not support Stable ABI for Python < 3.12
select = "cp3{10,11}-*"
config-settings = { "cmake.define.CMAKE_CI_BUILD" = true, "cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/kickcat_build_config", "cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/kickcat_build_config/toolchain.cmake" }
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.config-settings]
"wheel.py-api" = "cp312"
"cmake.define.CMAKE_CI_BUILD" = true
"cmake.define.CMAKE_FIND_ROOT_PATH" = "/tmp/kickcat_build_config"
"cmake.define.CMAKE_TOOLCHAIN_FILE" = "/tmp/kickcat_build_config/toolchain.cmake"

[tool.cibuildwheel.linux]
before-all = [
  'pipx install conan',
  './scripts/setup_build.sh /tmp/kickcat_build_config',
  'source tools/setup/version.sh && sed -i "s/0\.0\.0/${VERSION}/g" pyproject.toml'
]
repair-wheel-command = [
  "auditwheel repair --zip-compression-level=9 -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {dest_dir}/*.whl",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".venv",
    "build",
    "build_*",
    "nuttxspace",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
