add_subdirectory(common)
add_subdirectory(easycat)
add_subdirectory(elmo)
add_subdirectory(freedom-k64f)
add_subdirectory(ingenia)
add_subdirectory(load_esi)
add_subdirectory(wdc_foot)
add_subdirectory(marvin)

if(UNIX)
    add_subdirectory(gateway)
endif()

add_subdirectory(topology)
add_subdirectory(scout)
