add_subdirectory(common)
add_subdirectory(ds402_drive)
add_subdirectory(easycat)
add_subdirectory(elmo)
add_subdirectory(freedom-k64f)
add_subdirectory(ingenia)
add_subdirectory(load_esi)
add_subdirectory(eoe_loopback)
add_subdirectory(simulated_bus)
add_subdirectory(wdc_foot)
add_subdirectory(marvin)
if(UNIX)
    add_subdirectory(gateway)
endif()
