if (NUTTX)
    if (NUTTX_ARCH_CHIP STREQUAL "xmc4")
        add_subdirectory(xmc4800/xmc4800-relax/nuttx)
        add_subdirectory(xmc4800/wdc_foot/nuttx)
    else()
        # LAN9252-based NuttX boards resolve by BOARD_NAME (arduino-due, freedom-k64f, ...)
        add_subdirectory(lan9252/${BOARD_NAME}/nuttx)
    endif()
endif()

if (RPI)
    add_subdirectory(lan9252/rpi/linux)
endif()
